--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         image: menachemkazido/tst-api
         ports:
         - containerPort: 8000
-        emv:
+        env:
           - name: DB_HOST
             value: "sql-service"
           - name: DB_USER
